--- a/faqs.html
+++ b/faqs.html
@@ -22,7 +22,10 @@
                 <summary>Withdrawal</summary>
                 <p class="text">? How long does it take to withdraw from Bitcoin?<br>You must have a balance of at least 0.001 bitcoin to make a withdrawal. You can withdraw up to $2,000 worth of bitcoin every 24hours and upto $5,000 within any 7-day period. Transfers to external wallets usually take around two hours but can take longer.</p>
             </details>
-            
+            <details>
+                <summary>How does it work?</summary>
+				<p class="text">? How does the OmagCryptoInvestment work?<br>The process of selecting a suitable investment plan and  investing with us successfully is very simple. You just have to follow <a href="howitworks.html">these simple steps.</a></p>
+            </details>
         </div>
         </div>
     </body>
