--- a/howitworks.html
+++ b/howitworks.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <title>Investment Plans</title>
-         <link rel="stylesheet" type="text/css" href="styleinvest.css">
+    <title>How It Works</title>
+         <link rel="stylesheet" type="text/css" href="stylehowitworks.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
 <body style="background-color: #a5d8f3;">
     
     <center><i class="fa fa-line-chart fa-5x"></i><br>
