--- a/dashboard.html
+++ b/dashboard.html
@@ -18,57 +18,57 @@
 			<p> Please do not click any package if you don't have an intention to buy yet.</p>
 		</center>
 			
-		<div class="wrapper">
+		<div class="box12">
 			<center><h2>Buy Package</h2></center>
 			<div class="box2">
-				<p><b>Silver</b></p>
+				<a href="MyInvestments.html"><p><b>Silver</b></p>
 				<p>$100</p>
-				<p><i>Plus $19 software fee</i></p>
+					<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box3">
-				<p><b>Silver</b></p>
+				<a href="MyInvestments.html"><p><b>Silver</b></p>
 				<p>$400</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box4">
-				<p><b>Silver</b></p>
+				<a href="MyInvestments.html"><p><b>Silver</b></p>
 				<p>$600</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box5">
-				<p><b>Gold</b></p>
+				<a href="MyInvestments.html"><p><b>Gold</b></p>
 				<p>$1000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box6">
-				<p><b>Gold</b></p>
+				<a href="MyInvestments.html"><p><b>Gold</b></p>
 				<p>$5,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box7">
-				<p><b><b>Gold</b></b></p>
+				<a href="MyInvestments.html"><p><b><b>Gold</b></b></p>
 				<p>$10,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box8">
-				<p><b>Platinum</b></p>
+				<a href="MyInvestments.html"><p><b>Platinum</b></p>
 				<p>$20,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box9">
-				<p><b>Platinum</b></p>
+				<a href="MyInvestments.html"><p><b>Platinum</b></p>
 				<p>$50,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box10">
-				<p><b>Platinum</b></p>
+				<a href="MyInvestments.html"><p><b>Platinum</b></p>
 				<p>$100,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 			<div class="box11">
-				<p><b>Titanium</b></p>
+				<a href="MyInvestments.html"><p><b>Titanium</b></p>
 				<p>$500,000</p>
-				<p><i>Plus $19 software fee</i></p>
+				<p><i>Plus $19 software fee</i></p></a>
 			</div>
 		</div>
 	</body>
