--- a/loginform.html
+++ b/loginform.html
@@ -9,7 +9,7 @@
             <p>Username</p>
             <input type="text" maxlength="14"  minlength="7" required/  name="" placeholder="Enter Username">
             <p>Password</p>
-            <input type="password" pattern="(?=.*d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain atleast one number and one uppercase and lowercase letter and atleast 8 characters long" required/ name="" placeholder="Enter Password">
+            <input type="password"required/ name="" placeholder="Enter Password">
             <input type="submit" name="" value="Login"><br>
             <a href="#">Can't Recall Your Password?</a><br>
             <a href="#">Don't Have An Account?</a>
