--- a/dashboard.html
+++ b/dashboard.html
@@ -2,75 +2,88 @@
 	<head>
 		<title>Creating a Dashboard</title>
 		<link rel="stylesheet" type="text/css" href="styledashboard.css">
+		<link rel="stylesheet" href="">
+		<script>
+			function passvalues()
+			{
+				var firstname=document.getElementById("txt").value;
+				localStorage.setItem("textvalue",firstname);
+				return false;
+			}
+		</script>
 		
 	<body>
 		
 			<div class="circle">
 			<img src="profile%20icon.jpg" width="150px" height="150px">	
 		</div>
-		<div class="box">
-			<p>Name: Deborah Muthoni</p>
-			<p>Date Of Registration: 23/10/2020</p>
-			<p>shareable link</p>
-		</div>
+		<center><h1>Welcome <span id="result"></span>!
+	<script>
+		document.getElementById("result").innerHTML=localStorage.getItem("textvalue");
+			</script></h1></center>
 		<center>
 			<h4>Polite Notice!</h4>
 			<p> Please do not click any package if you don't have an intention to buy yet.</p>
+			<b><p>KINDLY ENTER YOUR PACKAGE OF CHOICE i.e 100, 400, etc</p></b>
+		    <form action="MyInvestments.html">
+			<input type="text" id="txt" /> 
+			<input type="submit" value="Click" onclick="passvalues();"/>
+			</form>
 		</center>
-			
 		<div class="box12">
-			<center><h2>Buy Package</h2></center>
+			<center><h2>Available Package</h2></center>
 			<div class="box2">
-				<a href="MyInvestments.html"><p><b>Silver</b></p>
+				<p><b>Silver</b></p>
 				<p>$100</p>
-					<p><i>Plus $19 software fee</i></p></a>
+					<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box3">
-				<a href="MyInvestments.html"><p><b>Silver</b></p>
+				<p><b>Silver</b></p>
 				<p>$400</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box4">
-				<a href="MyInvestments.html"><p><b>Silver</b></p>
+				<p><b>Silver</b></p>
 				<p>$600</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box5">
-				<a href="MyInvestments.html"><p><b>Gold</b></p>
+				<p><b>Gold</b></p>
 				<p>$1000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box6">
-				<a href="MyInvestments.html"><p><b>Gold</b></p>
+			    <p><b>Gold</b></p>
 				<p>$5,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box7">
-				<a href="MyInvestments.html"><p><b><b>Gold</b></b></p>
+				<p><b><b>Gold</b></b></p>
 				<p>$10,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box8">
-				<a href="MyInvestments.html"><p><b>Platinum</b></p>
+			    <p><b>Platinum</b></p>
 				<p>$20,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box9">
-				<a href="MyInvestments.html"><p><b>Platinum</b></p>
+				<p><b>Platinum</b></p>
 				<p>$50,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
-			</div>
+				<p><i>Plus $19 software fee</i></p>
+		</div>
 			<div class="box10">
-				<a href="MyInvestments.html"><p><b>Platinum</b></p>
+				<p><b>Platinum</b></p>
 				<p>$100,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 			<div class="box11">
-				<a href="MyInvestments.html"><p><b>Titanium</b></p>
+				<p><b>Titanium</b></p>
 				<p>$500,000</p>
-				<p><i>Plus $19 software fee</i></p></a>
+				<p><i>Plus $19 software fee</i></p>
 			</div>
 		</div>
+	
 	</body>
 	</head>
 </html>
