--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
 			<h4>Polite Notice!</h4>
 			<p> Please do not click any package if you don't have an intention to buy yet.</p>
 			<b><p>KINDLY ENTER YOUR PACKAGE OF CHOICE i.e 100, 400, etc</p></b>
-		    <form action="MyInvestments.html">
+		    <form  action="invoice.html">
 			<input type="text" id="txt" /> 
 			<input type="submit" value="Click" onclick="passvalues();"/>
 			</form>
